less/core.less
@sc-blue:   rgb(18, 86, 135);
@sc-teal:   rgb(0, 137, 152);
@sc-orange: rgb(239, 130, 0);
@sc-purple: rgb(101, 31, 118);
@sc-gray:   rgb(159, 164, 166);
@sc-red:    rgb(220, 41, 30);
@sc-black:  rgb(17, 28, 36);

@vsc-blue:       rgb(0, 114, 197);
@vsc-light-gray: rgb(243, 243, 243);
@vsc-dark-gray:  rgb(108, 108, 108);

html, body {
  height: 100%;
  padding: 0px;
  margin: 0px;
}

.flex-container {
  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: column;
  flex-direction: column;
}

.flex-row {
  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: row; 
  flex-direction: row;
  height: 100%;
}

.flex-container {
  height: 100%;
  width: 100%;
}

.tree {
  background-color: @vsc-light-gray;
  color: @vsc-dark-gray;
  font-family: HelveticaNeue-Light,sans-serif;
  font-size: 13px;
  overflow: scroll;
  line-height: 24px;
  margin: 0px;
  padding: 0px;
  width: 250px;
}

.tree ul {
  cursor: pointer;
  list-style: none;
  padding-left: 12px;
}

.tree span {
  background-position: -10px 0px;
  background-repeat: no-repeat;
  cursor: pointer;
}

.content {
  width: 100%;
}

footer {
  bottom: 0;
  color: white;
  background-color: @vsc-blue;
  position: absolute;
  width: 100%;
}

.tree-item-selected {
  font-style: oblique;
}

